--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,15 @@
+[project]
+name = "python-for-lunch"
+version = "0.1.0"
+description = "Python for lunch"
+readme = "README.md"
+requires-python = ">=3.10"
+dependencies = [
+    "mkdocs>=1.6.1",
+    "mkdocs-jupyter>=0.25.1",
+    "mkdocs-material>=9.5.50",
+]
+
 [tool.ruff]
 extend-exclude = [
     # Ignore historic files
