--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Python for lunch"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "mkdocs-macros-plugin>=1.3.7",
     "mkdocs>=1.6.1",
     "mkdocs-jupyter>=0.25.1",
     "mkdocs-material>=9.5.50",
