--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,11 @@ markdown_extensions:
   - pymdownx.details
   - pymdownx.superfences
 
+nav:
+  - index.md
+  - talks.md
+  - contributing.md
+  - resources.md
 plugins:
   - macros
   - mkdocs-jupyter:
