--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,8 @@ site_url: https://uu-imau.github.io/python-for-lunch/
 repo_url: https://github.com/UU-IMAU/python-for-lunch
 theme:
   name: material
+  icon:
+    logo: material/language-python
 
 extra:
   teams_url: https://teams.microsoft.com/l/channel/19%3A11ca5db51d9541e8be4f9714b4fd26e1%40thread.tacv2/Python%20for%20Lunch?groupId=d0097cb1-d2f5-432f-aa73-532bd153058f&tenantId=d72758a0-a446-4e0f-a0aa-4bf95a4a10e7
@@ -13,6 +15,9 @@ markdown_extensions:
   - attr_list
   - pymdownx.details
   - pymdownx.superfences
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
 
 nav:
   - index.md
