--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,29 +1,30 @@
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
-    hooks:
-      - id: trailing-whitespace
-      - id: end-of-file-fixer
-      - id: check-yaml
-        exclude: "^mkdocs.*"
-      - id: check-ast
-      - id: check-json
-        types: [text]
-        files: \.(json|ipynb)$
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.8.6
-    hooks:
-      - id: ruff
-        name: ruff lint (.py)
-        args: [--fix, --show-fixes]
-        types_or: [python]
-      - id: ruff
-        name: ruff isort (.ipynb)
-        args: [--select, I, --fix]
-        types_or: [jupyter]
-      - id: ruff-format
-        types_or: [python, jupyter]
-  - repo: https://github.com/rbubley/mirrors-prettier # Update mirror as official mirror is deprecated
-    rev: v3.4.2
-    hooks:
-      - id: prettier
+    - repo: https://github.com/pre-commit/pre-commit-hooks
+      rev: v5.0.0
+      hooks:
+          - id: trailing-whitespace
+          - id: end-of-file-fixer
+          - id: check-yaml
+            exclude: "^mkdocs.*"
+          - id: check-ast
+          - id: check-json
+            types: [text]
+            files: \.(json|ipynb)$
+    - repo: https://github.com/astral-sh/ruff-pre-commit
+      rev: v0.8.6
+      hooks:
+          - id: ruff
+            name: ruff lint (.py)
+            args: [--fix, --show-fixes]
+            types_or: [python]
+          - id: ruff
+            name: ruff isort (.ipynb)
+            args: [--select, I, --fix]
+            types_or: [jupyter]
+          - id: ruff-format
+            types_or: [python, jupyter]
+    - repo: https://github.com/rbubley/mirrors-prettier # Update mirror as official mirror is deprecated
+      rev: v3.4.2
+      hooks:
+          - id: prettier
+            args: ["--tab-width", "4"]
