--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,7 +21,7 @@ markdown_extensions:
 
 nav:
     - index.md
-    - talks.md
+    - talks/index.md
     - contributing.md
     - resources.md
 plugins:
