Add edit buttons to pages

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,13 @@
 site_name: IMAU Python for Lunch
 site_url: https://uu-imau.github.io/python-for-lunch/
 repo_url: https://github.com/UU-IMAU/python-for-lunch
+edit_uri: edit/main/docs/
 theme:
     name: material
     icon:
         logo: material/language-python
+    features:
+        - content.action.edit
 
 extra:
     teams_url: https://teams.microsoft.com/l/channel/19%3A11ca5db51d9541e8be4f9714b4fd26e1%40thread.tacv2/Python%20for%20Lunch?groupId=d0097cb1-d2f5-432f-aa73-532bd153058f&tenantId=d72758a0-a446-4e0f-a0aa-4bf95a4a10e7
