--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
             - uses: astral-sh/setup-uv@v4
               with:
                   version: "latest"
-            - run: uv run mkdocs build
+            - run: uv run mkdocs build --strict
             - uses: actions/upload-artifact@v4
               with:
                   name: Website
